--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,7 +35,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 @media (max-width : 1199px){
     .container, .container-lg, .container-md, .container-sm {
         max-width: 100%;
-        padding: 0 60px
     }
 }
 
